<resources>
    <string name="app_name">AndroidAcademyApp</string>
    <string name="back_value">Back</string>
    <string name="adult_field">13+</string>
    <string name="film_title">Avengers: End Game</string>
    <string name="genre">Action, Adventure, Fantasy</string>
    <string name="reviews_amount_text">125 Reviews</string>
    <string name="storyline">Storyline</string>
    <string name="story">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="movies_list">Movies list</string>
    <string name="_13">13+</string>
    <string name="film_time_limit">137 minutes</string>
    <string name="transition">detail_transition</string>
</resources>