<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailsActivity"
    android:background="@color/main_background">



    <ImageView
        android:id="@+id/imageMovie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_movie" />

    <ImageView
        android:id="@+id/gradient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/img_gradient"
        app:layout_constraintBottom_toBottomOf="@+id/imageMovie"
        app:layout_constraintEnd_toEndOf="@id/imageMovie"
        app:layout_constraintStart_toStartOf="@id/imageMovie"
        app:layout_constraintTop_toTopOf="@id/imageMovie"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/back"
        android:text="@string/back_value"
        android:textColor="@color/gray"
        android:fontFamily="@font/roboto"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="59dp"
        app:drawableStartCompat="@drawable/ic_arrow"
        android:drawablePadding="8dp"
        android:padding="2dp" />

    <TextView
        android:id="@+id/adult_field"
        android:text="@string/adult_field"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintBottom_toTopOf="@id/txt_title"
        android:layout_marginBottom="12dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintGuide_end="16dp" />


    <TextView
        android:id="@+id/txt_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="254dp"
        android:fontFamily="@font/roboto"
        android:text="@string/film_title"
        android:textColor="@color/title_white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/imageMovie" />

    <TextView
        android:id="@+id/txt_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/genre"
        android:textColor="@color/genre_text"
        android:textSize="14sp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />

    <ImageView
        android:id="@+id/star1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_red_star"
        app:layout_constraintTop_toBottomOf="@+id/txt_genre"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        android:layout_marginTop="8dp"/>

    <ImageView
        android:id="@+id/star2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_red_star"
        app:layout_constraintTop_toBottomOf="@+id/txt_genre"
        app:layout_constraintStart_toEndOf="@id/star1"
        android:layout_marginTop="8dp"
        android:layout_marginStart="3dp"/>

    <ImageView
        android:id="@+id/star3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_red_star"
        app:layout_constraintTop_toBottomOf="@+id/txt_genre"
        app:layout_constraintStart_toEndOf="@id/star2"
        android:layout_marginTop="8dp"
        android:layout_marginStart="3dp"/>

    <ImageView
        android:id="@+id/star4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_red_star"
        app:layout_constraintTop_toBottomOf="@+id/txt_genre"
        app:layout_constraintStart_toEndOf="@id/star3"
        android:layout_marginTop="8dp"
        android:layout_marginStart="3dp"/>

    <ImageView
        android:id="@+id/star5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_gray_star"
        app:layout_constraintTop_toBottomOf="@+id/txt_genre"
        app:layout_constraintStart_toEndOf="@id/star4"
        android:layout_marginTop="8dp"
        android:layout_marginStart="3dp"/>

    <TextView
        android:id="@+id/amount_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/star5"
        app:layout_constraintTop_toBottomOf="@id/txt_genre"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto"
        android:text="@string/reviews_amount_text"
        android:textColor="@color/gray"
        android:textSize="14sp"
        android:layout_marginStart="9dp"/>

    <TextView
        android:id="@+id/storyline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/storyline"
        android:textStyle="bold"
        android:textColor="@color/title_white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/amount_review"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"/>

    <TextView
        android:id="@+id/story_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/story"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="normal"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/storyline"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"/>

    <TextView
        android:id="@+id/txt_cast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/cast"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/gradient"
        android:layout_marginTop="256dp"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"/>

    <ImageView
        android:id="@+id/img_actor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/img_downey"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/txt_cast"
        android:layout_marginTop="7dp"
        android:background="@drawable/rounded_fg"/>

    <ImageView
        android:id="@+id/img_actor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/img_evans"
        app:layout_constraintStart_toEndOf="@id/img_actor1"
        app:layout_constraintTop_toBottomOf="@id/txt_cast"
        android:layout_marginTop="7dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_fg"/>

    <ImageView
        android:id="@+id/img_actor3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/img_ruffalo"
        app:layout_constraintStart_toEndOf="@id/img_actor2"
        app:layout_constraintTop_toBottomOf="@id/txt_cast"
        android:layout_marginTop="7dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_fg"/>

    <ImageView
        android:id="@+id/img_actor4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/img_hemsworth"
        app:layout_constraintStart_toEndOf="@id/img_actor3"
        app:layout_constraintTop_toBottomOf="@id/txt_cast"
        android:layout_marginTop="7dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_fg"/>

    <TextView
        android:id="@+id/txt_actor1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/roboto"
        android:text="@string/robert_downey_jr"
        android:textColor="@color/title_white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/img_actor1"
        app:layout_constraintStart_toStartOf="@id/img_actor1"
        app:layout_constraintTop_toBottomOf="@id/img_actor1" />

    <TextView
        android:id="@+id/txt_actor2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/roboto"
        android:text="@string/chris_evans"
        android:textColor="@color/title_white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/img_actor2"
        app:layout_constraintStart_toStartOf="@id/img_actor2"
        app:layout_constraintTop_toBottomOf="@id/img_actor2" />

    <TextView
        android:id="@+id/txt_actor3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/roboto"
        android:text="@string/mark_ruffalo"
        android:textColor="@color/title_white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/img_actor3"
        app:layout_constraintStart_toStartOf="@id/img_actor3"
        app:layout_constraintTop_toBottomOf="@id/img_actor3" />

    <TextView
        android:id="@+id/txt_actor4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/roboto"
        android:text="@string/chris_hemsworth"
        android:textColor="@color/title_white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/img_actor4"
        app:layout_constraintStart_toStartOf="@id/img_actor4"
        app:layout_constraintTop_toBottomOf="@id/img_actor4" />


</androidx.constraintlayout.widget.ConstraintLayout>